# openexr-rs

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  aliases.js  bindgen.sh  build.rs  index.html  search-index.js  settings.html  source-files.js  todo.md
.github/workflows/: ci.yml  rust.yml
c_wrapper/: cexr.cpp
examples/: half_output.rs  simple_input.rs  simple_output.rs
half/: all.html  index.html  sidebar-items.js  struct.f16.html
half/consts/: constant.DIGITS.html  constant.E.html  constant.EPSILON.html  constant.FRAC_1_PI.html  constant.FRAC_1_SQRT_2.html  constant.FRAC_2_PI.html  constant.FRAC_2_SQRT_PI.html  constant.FRAC_PI_2.html  constant.FRAC_PI_3.html  constant.FRAC_PI_4.html  constant.FRAC_PI_6.html  constant.FRAC_PI_8.html  constant.INFINITY.html  constant.LN_10.html  constant.LN_2.html  constant.LOG10_E.html  constant.LOG2_E.html  constant.MANTISSA_DIGITS.html  constant.MAX.html  constant.MAX_10_EXP.html  constant.MAX_EXP.html  constant.MAX_SUBNORMAL.html  constant.MIN.html  constant.MIN_10_EXP.html  constant.MIN_EXP.html  constant.MIN_POSITIVE.html  index.html  (+10 more)
openexr/: all.html  enum.PixelType.html  index.html  sidebar-items.js  struct.Box2i.html  struct.ScanlineOutputFile.html
openexr-sys/: Cargo.toml  build.rs
openexr-sys/c_wrapper/: cexr.cpp  cexr.h  memory_istream.cpp  memory_istream.hpp  rust_istream.cpp  rust_istream.hpp  rust_ostream.cpp  rust_ostream.hpp
openexr-sys/src/: bindings.rs  lib.rs
openexr_sys/: all.html  enum.CEXR_Compression.html  enum.CEXR_LineOrder.html  enum.CEXR_PixelType.html  fn.CEXR_ChannelListIter_delete.html  fn.CEXR_ChannelListIter_next.html  fn.CEXR_FrameBuffer_copy_and_offset_scanlines.html  fn.CEXR_FrameBuffer_delete.html  fn.CEXR_FrameBuffer_get_channel.html  fn.CEXR_FrameBuffer_insert.html  fn.CEXR_FrameBuffer_new.html  fn.CEXR_Header_channel_list_iter.html  fn.CEXR_Header_data_window.html  fn.CEXR_Header_delete.html  fn.CEXR_Header_display_window.html  fn.CEXR_Header_envmap.html  fn.CEXR_Header_erase_attribute.html  fn.CEXR_Header_get_channel.html  fn.CEXR_Header_has_envmap.html  fn.CEXR_Header_has_multiview.html  fn.CEXR_Header_insert_channel.html  fn.CEXR_Header_multiview.html  fn.CEXR_Header_new.html  fn.CEXR_Header_set_compression.html  fn.CEXR_Header_set_data_window.html  fn.CEXR_Header_set_display_window.html  fn.CEXR_Header_set_envmap.html  fn.CEXR_Header_set_line_order.html  fn.CEXR_Header_set_multiview.html  fn.CEXR_Header_set_pixel_aspect_ratio.html  fn.CEXR_Header_set_screen_window_center.html  fn.CEXR_Header_set_screen_window_width.html  fn.CEXR_IStream_delete.html  fn.CEXR_IStream_from_memory.html  fn.CEXR_IStream_from_reader.html  fn.CEXR_InputFile_delete.html  fn.CEXR_InputFile_from_file_path.html  fn.CEXR_InputFile_from_stream.html  fn.CEXR_InputFile_header.html  fn.CEXR_InputFile_read_pixels.html  (+24 more)
src/: cexr_type_aliases.rs  error.rs  frame_buffer.rs  header.rs  lib.rs  stream_io.rs  threads.rs
tests/: incremental_io.rs  memory_io.rs  negative_window.rs  non_zero_origin_window.rs
(+80 files in other folders)
