[workspace]
members = ["openexr-sys"]

[package]
name = "openexr"
version = "0.5.0"
authors = ["Nathan Vegdahl <cessen@cessen.com>"]
repository = "https://github.com/cessen/openexr-rs"
readme = "README.md"
license = "MIT"
description = "Rust bindings for OpenEXR"
keywords = ["OpenEXR"]

[dependencies]
libc = "0.2"
half = "1"

[dependencies.openexr-sys]
path = "openexr-sys"
version = "0.5.0"
