[package]
name = "openexr-sys"
version = "0.1.0"
authors = ["Nathan Vegdahl <cessen@cessen.com>", "Benjamin Saunders <ben.e.saunders@gmail.com>"]
build = "build.rs"
repository = "https://github.com/cessen/openexr-rs"
license = "MIT"
keywords = ["OpenEXR"]

[lib]
name = "openexr_sys"
path = "src/lib.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
gcc = "0.3"
cmake = "0.1"
pkg-config = "0.3"
