[package]
name = "openexr-sys"
version = "0.7.0"
authors = ["Nathan Vegdahl <cessen@cessen.com>", "Benjamin Saunders <ben.e.saunders@gmail.com>"]
build = "build.rs"
repository = "https://github.com/cessen/openexr-rs"
license = "MIT"
description = "FFI bindings for OpenEXR, used by the openexr crate"
keywords = ["OpenEXR", "exr"]

[lib]
name = "openexr_sys"
path = "src/lib.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
